--- a/data_sim.Rmd
+++ b/data_sim.Rmd
@@ -15,6 +15,9 @@ editor_options:
 
 ```{r doc-setup, include = FALSE}
 
+seed_smorfia <- 17 # 'A disgrazia!
+set.seed(seed_smorfia) # seed for random number generation
+
 # ### install packages
 # install.packages("devtools")
 # install.packages("here")
@@ -22,13 +25,9 @@ editor_options:
 # install.packages("kableExtra")
 # install.packages("tidyverse")
 # devtools::install_github("debruine/faux", build_vignettes = TRUE)
-# install.packages("synthpop")
-# install.packages("brms")
-# install.packages("tidybayes")
+# install.packages("rstatix")
+# install.packages("ggpubr")
 # install.packages("viridis")
-# devtools::install_github("mikabr/ggpirate", dependencies = TRUE)
-# install.packages("patchwork")
-# install.packages("bayesplot")
 
 ### load packages
 library(here)
@@ -36,13 +35,9 @@ library(knitr)
 library(kableExtra)
 library(tidyverse)
 library(faux)
-library(synthpop)
-library(brms)
-library(tidybayes)
+library(rstatix)
+library(ggpubr)
 library(viridis)
-library(ggpirate)
-library(patchwork)
-library(bayesplot)
 
 # for RMarkdown
 options(digits = 2) # number of decimal digits
@@ -53,69 +48,233 @@ opts_chunk$set(
   fig.dim = c(6, 6) # figure width & height
 )
 
-# ggplot custom theme
-theme_custom <- theme_minimal(base_size = 16) +
-  theme(
-    strip.text = element_text(
-      hjust = .5,
-      size = 20
-    ),
-    legend.title = element_blank(),
-    plot.title = element_text(size = 22, hjust = .5),
-    legend.box.background = element_rect(color = "transparent") # transparent outer line
-  )
-
-# cividis color palette for bayesplot
-color_scheme_set("viridisE")
-
-seed_smorfia <- 1 # Italia!
-set.seed(seed_smorfia) # seed for random number generation
+# # ggplot custom theme
+# theme_custom <- theme_minimal(base_size = 16) +
+#   theme(
+#     strip.text = element_text(
+#       hjust = .5,
+#       size = 20
+#     ),
+#     legend.title = element_blank(),
+#     plot.title = element_text(size = 22, hjust = .5),
+#     legend.box.background = element_rect(color = "transparent") # transparent outer line
+#   )
 
 ```
 
 ***
 ***
 
-# Synthesize Simulated Data
-
-## Data Simulation
-### Graph
-### Statistical Analysis
-#### Diagnostics
-
-## Synthetic Dataset
-### Graph
-### Statistical Analysis
-#### Diagnostics
-
-## Compare Original and Synthetic Dataset
-### Graph Raw Data
-### Graph Posterior Distributions of Fixed Effects
-
-
-
-# Synthesize ERP Data?
-
-## Data cleaning
-
-
-
-***
-***
-
-Open Data are amazing
-Sometimes data cannot be shared, e.g., because they are proprietary or sensitive 
-Solution: simulate dataset (see [Quintana, 2020](https://elifesciences.org/articles/53275))
-
-# Synthesize Simulated Data
-
-Typically you want to synthesize existing data. However, here we will synthesize **simulated** data.
+# One-sample t-test
 
 ## Data Simulation
 
-We use functions in the package [`faux`](https://debruine.github.io/faux/index.html) by Lisa DeBruine
+```{r ttest-onesample-data}
 
-We use a slightly modified example in the [preprint by DeBruine & Barr](https://psyarxiv.com/xp5cy/)
+# parameters
+between_ssj <- list(condition = c("test")) # list of between-subject factors
+n_ssj <- 50 # number of samples (here, participants)
+mu_cond <- 1 # variable means
+sd_cond <- 1 # variable standard deviations
+
+# data simulation
+ttest_onesample_data <-
+  sim_design(
+    between = between_ssj,
+    n = n_ssj,
+    mu = mu_cond,
+    sd = sd_cond,
+    empirical = FALSE, # data sampled from a population with specified parameters (not exact)
+    long = TRUE, # results in long format
+    dv = list(value = "value"), # name of dependent variables
+    id = list(participant = "participant"),  # name of ID column
+    plot = FALSE, # plot
+    rep = 1 # number of simulated datasets
+  ) %>% 
+  as_tibble()
+
+```
+
+## Graph
+
+```{r ttest-onesample-graph}
+
+ggviolin(
+  ttest_onesample_data,
+  x = "condition",
+  y = "value",
+  fill = viridis(1),
+  add = c("boxplot", "jitter"),
+  add.params = list(
+    color = "white",
+    fill = NULL
+    )
+)
+
+```
+
+## Statistical Analysis
+
+```{r ttest-onesample-test}
+
+ttest_onesample_results <-
+  t_test(
+    ttest_onesample_data,
+    value ~ 1,
+    p.adjust.method = "holm",
+    paired = FALSE,
+    var.equal = FALSE,
+    alternative = "two.sided",
+    mu = 0,
+    conf.level = 0.95,
+    detailed = FALSE
+  )
+
+```
+
+# Between-subject t-test
+
+## Data Simulation
+
+```{r ttest-between}
+
+ttest_between_data <-
+  sim_design(
+    between = list(treatment = c("control", "drug")),
+    n = c(50, 50),
+    mu = c(1, 2),
+    sd = c(1, 1.2),
+    empirical = FALSE,
+    long = TRUE,
+    dv = list(value = "value"),
+    id = list(participant = "participant"),
+    plot = FALSE,
+    rep = 1
+  ) %>% 
+  as_tibble()
+
+ttest_between_results <-
+  t.test(
+    x = filter(ttest_between_data, treatment == "control")$value,
+    y = filter(ttest_between_data, treatment == "drug")$value,
+    alternative = "two.sided",
+    mu = 0,
+    paired = FALSE,
+    var.equal = FALSE,
+    conf.level = .95
+  )
+
+```
+
+## Graph
+
+```{r ttest-onesample-graph}
+
+p <-
+ggviolin(
+  ttest_onesample_data,
+  x = "condition",
+  y = "value",
+  fill = viridis(1),
+  # palette = "#00AFBB",
+  add = c("boxplot", "jitter"),
+  error.plot = "crossbar",
+  add.params = list(
+    color = "white",
+    fill = NULL
+    )
+)
+
+
+
+
+my_comparisons <- list(c("condition", 0))
+
+p + stat_compare_means(comparisons = my_comparisons)+ # Add pairwise comparisons p-value
+  stat_compare_means(label.y = 50)                   # Add global p-value
+
+  stat_compare_means(comparisons = my_comparisons, label = "p.signif")+ # Add significance levels
+  stat_compare_means(label.y = 50)                                      # Add global the p-value 
+
+```
+
+
+## Statistical Analysis
+
+# Within-subject t-test
+
+## Data Simulation
+
+```{r ttest-within}
+
+ttest_within_data <-
+  sim_design(
+    within = list(condition = c("neutral", "emotion")),
+    n = c(50, 50),
+    mu = c(1, 2),
+    sd = c(1, 1.2),
+    r = .7,
+    empirical = FALSE,
+    long = TRUE,
+    dv = list(value = "value"),
+    id = list(participant = "participant"),
+    plot = FALSE,
+    rep = 1
+  ) %>% 
+  as_tibble()
+
+
+
+pairwise_t_test(
+  data,
+  formula,
+  comparisons = NULL,
+  ref.group = NULL,
+  p.adjust.method = "holm",
+  paired = FALSE,
+  pool.sd = !paired,
+  detailed = FALSE,
+  ...
+)
+
+ttest_within_results <-
+  t.test(
+    x = filter(ttest_within_data, condition == "neutral")$value,
+    y = filter(ttest_within_data, condition == "emotion")$value,
+    alternative = "two.sided",
+    mu = 0,
+    paired = TRUE,
+    var.equal = FALSE,
+    conf.level = .95
+  )
+
+```
+
+## Graph
+
+## Statistical Analysis
+
+# 2 x 2 factorial ANOVA
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ```{r sim-data-params}
 
