add within-ssj correlations in mixed ANOVA

--- a/code/data_sim.Rmd
+++ b/code/data_sim.Rmd
@@ -26,7 +26,6 @@ set.seed(seed_smorfia) # seed for random number generation
 # install.packages("faux")
 # install.packages("rstatix")
 # install.packages("ggpubr")
-# install.packages("viridis")
 
 ### load packages
 library(here)
@@ -36,7 +35,6 @@ library(tidyverse)
 library(faux)
 library(rstatix)
 library(ggpubr)
-library(viridis)
 
 # for RMarkdown
 options(digits = 2) # number of decimal digits
@@ -73,9 +71,9 @@ theme_custom <-
 
 # parameters
 ttest_onesample_between <- list(condition = c("test")) # list of between-subject factors
-ttest_onesample_n <- 50 # number of samples (here, participants)
-ttest_onesample_mu_cond <- 1 # variable means
-ttest_onesample_sd_cond <- 1 # variable standard deviations
+ttest_onesample_n <- 50 # number of participants
+ttest_onesample_mu_cond <- 1 # means
+ttest_onesample_sd_cond <- 1 # standard deviations
 
 # data simulation
 ttest_onesample_data <-
@@ -84,11 +82,11 @@ ttest_onesample_data <-
     n = ttest_onesample_n,
     mu = ttest_onesample_mu_cond,
     sd = ttest_onesample_sd_cond,
-    empirical = FALSE, # data sampled from a population with specified parameters (not exact)
+    empirical = FALSE, # exact mean/SD?
     long = TRUE, # results in long format
     dv = list(value = "value"), # name of dependent variables
     id = list(id = "id"),  # name of ID column
-    plot = FALSE, # plot
+    plot = FALSE, # plot?
     rep = 1 # number of simulated datasets
   ) %>% 
   as_tibble()
@@ -144,14 +142,14 @@ ttest_onesample_plot <-
     alpha = .5, # density: fill color transparency
     trim = TRUE, # density: trim tails
     width = 1, # density: width
-    add = c("boxplot", "jitter"),
+    add = c("boxplot", "jitter"), # overlay boxplot and jittered individual data points
     add.params = list(
       color = "black", # color of boxplot lines and jittered points
       fill = "white" # fill color of boxplot
     ),
     title = "One-sample t-test", # plot title
-    xlab = "Condition", # x-axis title
-    ylab = "Value", # y-axis title
+    xlab = "Condition", # x-axis: title
+    ylab = "Value", # y-axis: title
     label.rectangle = TRUE, # rectangle underneath text
     ggtheme = theme_custom # ggplot theme
   )
@@ -179,9 +177,9 @@ ggsave( # save to file
 
 # parameters
 ttest_between_between <- list(treatment = c("control", "drug"))
-ttest_between_n <- c(50, 50)
-ttest_between_mu_cond <- c(1, 2)
-ttest_between_sd_cond <- c(1, 1.2)
+ttest_between_n <- list(control = 50, drug = 40)
+ttest_between_mu_cond <- list(control = 1, drug = 2)
+ttest_between_sd_cond <- list(control = 1, drug = 1.4)
 
 # data simulation
 ttest_between_data <-
@@ -262,11 +260,11 @@ ttest_between_plot <-
     label.rectangle = TRUE,
     ggtheme = theme_custom
   ) +
-  stat_compare_means(
+  stat_compare_means( # add test results in graph
     method = "t.test",
     paired = FALSE,
     method.args = list(alternative = "two.sided"),
-    hide.ns = FALSE
+    hide.ns = FALSE # hide non-significant comparisons?
   )
 
 ttest_between_plot
@@ -291,10 +289,10 @@ ggsave(
 ```{r ttest-within-data}
 
 # parameters
-ttest_within_within <- list(condition = c("neutral", "emotion"))
-ttest_within_n <- c(50, 50)
-ttest_within_mu_cond <- c(1, 2)
-ttest_within_sd_cond <- c(1, 1.2)
+ttest_within_within <- list(condition = c("neutral", "emotion")) # list of within-subject factors
+ttest_within_n <- list(neutral = 50, emotion = 50) # number of participants must be the same for each condition
+ttest_within_mu_cond <- list(neutral = 1.3, emotion = 2.1)
+ttest_within_sd_cond <- list(neutral = 1.2, emotion = 1.6)
 ttest_within_r <- .7 # correlations among variables
 
 # data simulation
@@ -409,18 +407,24 @@ ggsave(
 ANOVA_within <- list(condition = c("neutral", "unpleasant", "pleasant"))
 ANOVA_between <- list(treatment = c("control", "drug"))
 ANOVA_n <- list(
-  control = c(neutral = 50, unpleasant = 50, pleasant = 50),
-  drug = c(neutral = 50, unpleasant = 50, pleasant = 50)
+  control = c(neutral = 50, unpleasant = 50, pleasant = 50), # number of participants must be the same for each condition...
+  drug = c(neutral = 30, unpleasant = 30, pleasant = 30) # ... but can be different between groups
 )
 ANOVA_mu_cond <- list(
-  control = c(neutral = 1, unpleasant = 1.5, pleasant = 1.5),
-  drug = c(neutral = 1.5, unpleasant = 2, pleasant = 2.1)
+  control = c(neutral = 1, unpleasant = 1.5, pleasant = 1.4),
+  drug = c(neutral = 1.1, unpleasant = 1.4, pleasant = 2.1)
 )
 ANOVA_sd_cond <- list(
   control = c(neutral = 1, unpleasant = 1.2, pleasant = 1.2),
-  drug = c(neutral = 1.2, unpleasant = 1.2, pleasant = 1.2)
+  drug = c(neutral = 1.2, unpleasant = 1.5, pleasant = 1.6)
 )
-ANOVA_r <- .5
+
+ANOVA_r <- list( # if the design has more than 2 within-subject conditions, specify each correlation in the upper right triangle of the correlation matrix as a vector (https://debruine.github.io/faux/articles/sim_design.html#correlations-1)
+  control = c(.40, .50,
+                   .60),
+  drug = c(.15, .25,
+                .45)
+  )
 
 # data simulation
 ANOVA_data <-
